# srgw_graphon_submission

./: README.md  example.py  pyproject.toml
experiments/rates/: barycenter_aggregation.run  barycenter_aggregation.yaml  graphon_rates.run  graphon_rates.yaml  run_exp.py  sbm_sparsity.run  sbm_sparsity.yaml  sbm_with_true_k.run  sbm_with_true_k.yaml
src/: __init__.py
src/experiment/: experiments_class.py  experiments_def.py  experiments_runner.py  utils_exp.py
src/method/: alignment.py  graphons.py  srgw_barycenter.py  torch_spectral.py  utils.py
src/visualisation/: vis_utils.py
test/: test_alignment.py  test_graphon_fast.py  test_plan_manipulation.py
